--- a/r_tips.qmd
+++ b/r_tips.qmd
@@ -20,14 +20,28 @@ If you've never had any programming, R can feel intimidating! We encourage you t
 
 ## Common R-Related Tasks
 
-### Open Github Desktop & Clone or refresh the repo
+### Open Github Desktop & Clone or Refresh the repo
 
-Our analysis code is kept in what's called a "Github repository". It's called analysis_risk2. The first thing you want to do when you start your shift, is use Github Desktop, make sure analysis_risk2 is the selected repo, and hit the tab that says "Pull Origin". This will download any changes that have been made, so you have the latest version of the code. 
+Our analysis code is kept in what's called a "Github repository". It's called analysis_risk2. The first thing you want to do when you start your shift, is use Github Desktop, make sure analysis_risk2 is the current repo, and hit the tab that says "Pull Origin". This will download any changes that have been made, so you have the latest version of the code. 
 
-### Open an R project
+If analysis_risk2 is not the current repo, and it's not visible, it may not have been downloaded at all yet. in Github Desktop hit the File menu, then Clone, then select analysis_risk2 from the list of repositories. This will download a copy.
+
+### Open an R project in RStudio
 In order for our scripts to run correctly, you must have the associated project open. In the very upper right-hand corner of R-Studio, just under the window min/max/close controls, you will see a little box icon with "Project: (None)" next to it. Click the down arrow next to that, and hit Open Project. Browse to your repository and you will see a .rProj file that you can open. That opens your project and makes sure that all the scripts can find the right file paths.
 
 If you don't see a .rProj file in the repo, you may need to create one - Ask Susan for guidance!
+
+### Open an R script in RStudio
+
+Rstudio is divided into four "panes". 
+
+* Top left is where an open script or a dataframe is displayed;
+* Bottom left is the Console pane, where you can paste code to be run
+* Top right is the Environment pane, where you can see dataframes and variables that are in your environment
+* Bottom right is the Files pane, where you can see a list of files in the repo. This pane would also display tables in the Viewer tab for certain scripts. 
+
+All files that you will run are in the staff_scripts subfolder in the Files pane. Browse to the one you want and double click to open.
+
 
 ### Run code chunks in Rmarkdown scripts  
 
@@ -53,7 +67,7 @@ Use the code here: “update.packages(ask = FALSE)”
 The code above will update all the outdated packages without asking permission for each one. 
 2. Click on package and update  
 
-### Uupdate R and R studio   
+### Update R and R studio   
 * **To update R**:  click on “R” on the menu bar once R is opened>> Check for R Updates >> Type “yes” if you see the question “Do you want to visit CRAN now”? >> Download the most recent version of R.  
 
 * **To update R studio**: This time open R studio and click “Help” on the menu bar on the top of the screen >> Check for Updates >> You will see a message asking you if you’d like to download the most recent version of R if there’s a new version.  
