--- a/study_phones.qmd
+++ b/study_phones.qmd
@@ -6,7 +6,7 @@
 
 **Voicemail ID:** (same as phone number)
 
-**Voicemail Password:** See Lastpass
+**Voicemail Password:** See Lastpass (admins only)
 
 This number directs to the phones in the building, and it goes straight
 to voicemail. Voicemails are recorded in the Cisco Jabber database and
@@ -15,13 +15,13 @@ phone. We can also use this phone to reach out to potential recruitment sites.
 
 To check the [voicemail
 remotely](https://kb.wisc.edu/vs/page.php?id=72655): follow the linked
-dialing instructions. ID is the phone number, passcode is in Lastpass
+dialing instructions. ID is the phone number, passcode is in Lastpass (admins only)
 
 ## Study Cell Phones
 
 **STAR Study Support Phone number:** (608)-220-5670.
 
-**STAR Study Support Voice-mail pin-code:** See Lastpass
+**STAR Study Support Voice-mail pin-code:** See Lastpass (admins only)
 
 The STAR Study Support study cell phone will be used to communicate with participants for all study
 phone visits EXCLUDING the Consent/Onboarding Session (One-week check-in, Final phone visit)
@@ -30,7 +30,7 @@ while they are on study.This number is also used to send the Training Video Qual
 
 **STAR Study Recruitment Phone number:** (608)-220-8269.(Not currently in use)
 
-**STAR Study Recruitment Voice-mail pin-code:** See Lastpass
+**STAR Study Recruitment Voice-mail pin-code:** See Lastpass (admins only)
 
 STAR Study Recruitment cell phone will be used to call participants for the Consent/Onboarding session, and to field Phone Screenings. This number is also used to send the Consent
 Qualtrics link (digital recruit) or Onboarding Qualtrics link (Aurora recruit)
