--- a/one_week_check_in.qmd
+++ b/one_week_check_in.qmd
@@ -136,7 +136,7 @@ IF THERE ARE ISSUES WITH THE DATA
 *Great! Well, if it has not impacted your battery life up to this point, it is unlikely that it will negatively impact battery life during the rest of your time on the study. If at any point you start to suspect that your battery life is changing significantly, please reach out to study staff.*
 
 
-*Now I just want to walk you through what you can expect in the coming weeks and months of your participation in the STAR study. First, you will receive a payment of $10 for completing today's call and again, an additional $20 for completing the training videos (if completed) today by 5 PM Central Time. You will then be receiving your first monthly study payment in the next couple of weeks. Together, these payments will be loaded onto the reloadable debit card we sent you. Your first study payment will include payments for all the tasks you've completed, data you've shared, and bonuses you've earned*
+*Now I just want to walk you through what you can expect in the coming weeks and months of your participation in the STAR study. First, you will receive a payment of $10 for completing today's call and again, an additional $20 for completing the training videos (if completed). This payment will be issued today by 5 PM Central Time. You will then be receiving your first monthly study payment in the next couple of weeks. Together, these payments will be loaded onto the reloadable debit card we sent you. Your first study payment will include payments for all the tasks you've completed, data you've shared, and bonuses you've earned*
 
 *Please do not lose or throw away this card. Each month, the bonuses you have earned for completing your study tasks and sharing data the previous month will be added to that card. You will receive your monthly study payments on the* **{15th/30th SPECIFY BASED ON THE R SCRIPT}** *of each month, always by 5 PM Central Time. The exception is, if that payment date falls on a weekend or bank holiday, you will instead receive payment the following business day.*
 
